--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.9",
     "request": "^2.88.2"
   }
 }
